Use zindex to avoid some overlapping of page content

--- a/public/style.css
+++ b/public/style.css
@@ -207,6 +207,7 @@ ul {
     width: 30%;
     max-width: 30%;
     padding: 2rem;
+    z-index: 10;
 }
 
 .page-title {
